--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <!-- Pack 1: Montage -->
             <div class="card bg-white rounded-xl shadow-lg p-8 flex flex-col items-center text-center border-t-4 border-blue-500">
                 <h3 class="text-3xl font-bold text-gray-900 mb-4">Pack Montage</h3>
-                <p class="text-gray-600 mb-6 flex-grow">Obtenez un montage vidéo professionnel pour vos projets, entièrement gratuit !</p>
+                <p class="text-gray-600 mb-6 flex-grow">Bénéficiez d'un service de montage vidéo professionnel pour sublimer vos créations, sans aucun frais.</p>
                 <div class="text-5xl font-extrabold text-blue-700 mb-6">
                     0€<span class="text-xl text-gray-500">/mois</span>
                 </div>
@@ -72,7 +72,7 @@
             <!-- Pack 2: Miniature -->
             <div class="card bg-white rounded-xl shadow-lg p-8 flex flex-col items-center text-center border-t-4 border-purple-500 relative">
                 <h3 class="text-3xl font-bold text-gray-900 mb-4">Pack Miniature</h3>
-                <p class="text-gray-600 mb-6 flex-grow">Créez des miniatures attrayantes pour vos vidéos, sans aucun coût !</p>
+                <p class="text-gray-600 mb-6 flex-grow">Créez des miniatures vidéo percutantes et attractives pour captiver votre audience, sans aucun coût.</p>
                 <div class="text-5xl font-extrabold text-purple-700 mb-6">
                     0€<span class="text-xl text-gray-500">/mois</span>
                 </div>
@@ -87,9 +87,12 @@
             </div>
 
             <!-- Pack 3: Montage + Miniature -->
-            <div class="card bg-white rounded-xl shadow-lg p-8 flex flex-col items-center text-center border-t-4 border-green-500">
+            <div class="card bg-white rounded-xl shadow-lg p-8 flex flex-col items-center text-center border-t-4 border-green-500 relative">
+                <span class="absolute top-0 right-0 -mt-4 -mr-4 bg-yellow-400 text-gray-800 text-sm font-bold px-4 py-2 rounded-full shadow-md transform rotate-6">
+                    Le choix n°1 !
+                </span>
                 <h3 class="text-3xl font-bold text-gray-900 mb-4">Pack Montage + Miniature</h3>
-                <p class="text-gray-600 mb-6 flex-grow">La solution complète pour vos vidéos : montage et miniatures, le tout gratuitement !</p>
+                <p class="text-gray-600 mb-6 flex-grow">Optez pour la solution complète : un montage vidéo expert et des miniatures optimisées, le tout gratuitement.</p>
                 <div class="text-5xl font-extrabold text-green-700 mb-6">
                     0€<span class="text-xl text-gray-500">/mois</span>
                 </div>
@@ -97,7 +100,6 @@
                     <li class="flex items-center"><svg class="w-6 h-6 text-green-500 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Montage vidéo avancé</li>
                     <li class="flex items-center"><svg class="w-6 h-6 text-green-500 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Miniatures personnalisées</li>
                     <li class="flex items-center"><svg class="w-6 h-6 text-green-500 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>2 révisions incluses</li>
-                    <li class="flex items-center"><svg class="w-6 h-6 text-green-500 mr-2" fill="currentColor" viewBox="0 0 20 0"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Support premium</li>
                 </ul>
                 <button onclick="orderPack('Pack Montage + Miniature', 0, '')" class="btn-primary bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
                     Commander maintenant
