--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <p class="text-xl md:text-2xl max-w-4xl mx-auto mb-10 opacity-90">
                 Découvrez nos ressources et tutoriels pour maîtriser l'art du montage vidéo. Que vous soyez débutant ou que vous souhaitiez perfectionner vos compétences, nous avons ce qu'il vous faut !
             </p>
-            <button onclick="window.open('https://www.youtube.com/results?search_query=tutoriel+montage+video', '_blank')"
+            <button onclick="window.open('🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴', '_blank')"
                     class="btn-primary bg-white text-blue-700 hover:bg-gray-100 font-bold py-4 px-12 rounded-full shadow-xl transition duration-300 ease-in-out transform hover:scale-110">
                 Commencer à apprendre
             </button>
@@ -131,7 +131,7 @@
     <footer class="bg-gray-900 text-white p-8 mt-16 shadow-inner">
         <div class="container mx-auto text-center text-gray-400 text-lg">
             <p>&copy; 2025 Commande de Packs. Tous droits réservés.</p>
-            <p class="mt-3">Développé avec ❤️ et Tailwind CSS.</p>
+            <p class="mt-3">Développé par LeNoobInconnu STUDIO.</p>
         </div>
     </footer>
 
