--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Livraison en 7 jours</li>
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Fichier haute résolution</li>
                 </ul>
-                <button onclick="orderPack('Pack Miniature', 0, '')" class="btn-primary bg-purple-600 hover:bg-purple-700 text-white font-bold py-4 px-10 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
+                <button onclick="orderPack('Pack Miniature', 0, 'https://example.com/pack-miniature')" class="btn-primary bg-purple-600 hover:bg-purple-700 text-white font-bold py-4 px-10 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
                     Commander maintenant
                 </button>
             </div>
@@ -108,7 +108,7 @@
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Miniatures personnalisées</li>
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>2 révisions incluses</li>
                 </ul>
-                <button onclick="orderPack('Pack Montage + Miniature', 0, '')" class="btn-primary bg-green-600 hover:bg-green-700 text-white font-bold py-4 px-10 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
+                <button onclick="orderPack('Pack Montage + Miniature', 0, 'https://example.com/pack-montage-miniature')" class="btn-primary bg-green-600 hover:bg-green-700 text-white font-bold py-4 px-10 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
                     Commander maintenant
                 </button>
             </div>
@@ -120,7 +120,7 @@
             <p class="text-xl md:text-2xl max-w-4xl mx-auto mb-10 opacity-90">
                 Découvrez nos ressources et tutoriels pour maîtriser l'art du montage vidéo. Que vous soyez débutant ou que vous souhaitiez perfectionner vos compétences, nous avons ce qu'il vous faut !
             </p>
-            <button onclick="window.open('🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴', '_blank')"
+            <button onclick="window.open('https://www.youtube.com/results?search_query=tutoriel+montage+video', '_blank')"
                     class="btn-primary bg-white text-blue-700 hover:bg-gray-100 font-bold py-4 px-12 rounded-full shadow-xl transition duration-300 ease-in-out transform hover:scale-110">
                 Commencer à apprendre
             </button>
@@ -131,7 +131,7 @@
     <footer class="bg-gray-900 text-white p-8 mt-16 shadow-inner">
         <div class="container mx-auto text-center text-gray-400 text-lg">
             <p>&copy; 2025 Commande de Packs. Tous droits réservés.</p>
-            <p class="mt-3">Développé par LeNoobInconnu STUDIO.</p>
+            <p class="mt-3">Développé avec ❤️ et Tailwind CSS.</p>
         </div>
     </footer>
 
@@ -168,12 +168,13 @@
 
             // Set up the confirm button's action
             confirmButton.onclick = () => {
-                if (packName === 'Pack Montage' && linkUrl) {
-                    window.open(linkUrl, '_blank'); // Open link in new tab for Pack Montage
+                // Check if a linkUrl is provided for ANY pack
+                if (linkUrl) {
+                    window.open(linkUrl, '_blank'); // Open link in new tab
                     modalMessage.textContent = `Votre commande pour le ${packName} a été confirmée. Le lien s'ouvre dans un nouvel onglet.`;
                     confirmButton.style.display = 'none'; // Hide confirm button after confirmation
                 } else {
-                    // For other packs or if no specific link, just show a confirmation message
+                    // If no specific link, just show a confirmation message
                     modalMessage.textContent = `Votre commande pour le ${packName} a été confirmée. Un représentant vous contactera sous peu.`;
                     confirmButton.style.display = 'none'; // Hide confirm button after confirmation
                 }
