--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>1 révision incluse</li>
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Livraison en 14 jours</li>
                 </ul>
-                <button onclick="orderPack('Pack Montage', 0, 'https://example.com/pack-montage')" class="btn-primary bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-10 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
+                <!-- Le lien pour le Pack Montage -->
+                <button onclick="orderPack('Pack Montage', 0, 'https://docs.google.com/forms/d/e/1FAIpQLScgROldd1Lr8t0nCKgZz0pt0hxbGBOacPn2_Is7fM9FkxzErA/viewform?usp=dialog')" class="btn-primary bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-10 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
                     Commander maintenant
                 </button>
             </div>
@@ -88,7 +89,8 @@
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Livraison en 7 jours</li>
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Fichier haute résolution</li>
                 </ul>
-                <button onclick="orderPack('Pack Miniature', 0, 'https://example.com/pack-miniature')" class="btn-primary bg-purple-600 hover:bg-purple-700 text-white font-bold py-4 px-10 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
+                <!-- Le lien pour le Pack Miniature -->
+                <button onclick="orderPack('Pack Miniature', 0, 'https://docs.google.com/forms/d/e/1FAIpQLScgROldd1Lr8t0nCKgZz0pt0hxbGBOacPn2_Is7fM9FkxzErA/viewform?usp=dialog')" class="btn-primary bg-purple-600 hover:bg-purple-700 text-white font-bold py-4 px-10 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
                     Commander maintenant
                 </button>
             </div>
@@ -108,7 +110,8 @@
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Miniatures personnalisées</li>
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>2 révisions incluses</li>
                 </ul>
-                <button onclick="orderPack('Pack Montage + Miniature', 0, 'https://example.com/pack-montage-miniature')" class="btn-primary bg-green-600 hover:bg-green-700 text-white font-bold py-4 px-10 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
+                <!-- Le lien pour le Pack Montage + Miniature -->
+                <button onclick="orderPack('Pack Montage + Miniature', 0, 'https://docs.google.com/forms/d/e/1FAIpQLScgROldd1Lr8t0nCKgZz0pt0hxbGBOacPn2_Is7fM9FkxzErA/viewform?usp=dialog')" class="btn-primary bg-green-600 hover:bg-green-700 text-white font-bold py-4 px-10 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
                     Commander maintenant
                 </button>
             </div>
