--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h3 class="text-4xl font-bold text-gray-900 mb-5">Pack Montage</h3>
                 <p class="text-gray-700 mb-8 flex-grow text-lg">Bénéficiez d'un service de montage vidéo professionnel pour sublimer vos créations, sans aucun frais.</p>
                 <div class="text-6xl font-extrabold text-blue-800 mb-8">
-                    0€<span class="text-2xl text-gray-600">/mois</span>
+                    0€<span class="text-2xl text-gray-600"></span>
                 </div>
                 <ul class="text-left text-gray-800 space-y-4 mb-10 w-full text-lg">
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Montage vidéo basique</li>
@@ -82,7 +82,7 @@
                 <h3 class="text-4xl font-bold text-gray-900 mb-5">Pack Miniature</h3>
                 <p class="text-gray-700 mb-8 flex-grow text-lg">Créez des miniatures vidéo percutantes et attractives pour captiver votre audience, sans aucun coût.</p>
                 <div class="text-6xl font-extrabold text-purple-800 mb-8">
-                    0€<span class="text-2xl text-gray-600">/mois</span>
+                    0€<span class="text-2xl text-gray-600"></span>
                 </div>
                 <ul class="text-left text-gray-800 space-y-4 mb-10 w-full text-lg">
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Création de miniature simple</li>
@@ -103,7 +103,7 @@
                 <h3 class="text-4xl font-bold text-gray-900 mb-5">Pack Montage + Miniature</h3>
                 <p class="text-gray-700 mb-8 flex-grow text-lg">Optez pour la solution complète : un montage vidéo expert et des miniatures optimisées, le tout gratuitement.</p>
                 <div class="text-6xl font-extrabold text-green-800 mb-8">
-                    0€<span class="text-2xl text-gray-600">/mois</span>
+                    0€<span class="text-2xl text-gray-600"></span>
                 </div>
                 <ul class="text-left text-gray-800 space-y-4 mb-10 w-full text-lg">
                     <li class="flex items-center"><svg class="w-7 h-7 text-green-500 mr-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>Montage vidéo avancé</li>
